--- a/app/templates/pages/crudlist.html.twig
+++ b/app/templates/pages/crudlist.html.twig
@@ -1,7 +1,7 @@
 {% extends "pages/abstract/dashboard.html.twig" %}
 
 {% block stylesheets_page %}
-    <!-- Page-specific CSS asset bundle -->
+    <!-- crudlist.html.twig Page-specific CSS asset bundle -->
     {{ encore_entry_link_tags('page.groups') }}
 {% endblock %}
 
