--- a/app/templates/pages/crudlist.html.twig
+++ b/app/templates/pages/crudlist.html.twig
@@ -13,22 +13,22 @@
 {% block body_matter %}
     <div class="row">
         <div class="col-md-12">
-            <div id="widget-groups" class="box box-primary">
+            <div id="widget-{{cr5model}}" class="box box-primary">
                 <div class="box-header">
                     <h3 class="box-title"><i class="fas fa-fw fa-users"></i> {{translate('CRUD', 2)}}</h3>
                     {% include "tables/table-tool-menu.html.twig" %}
                 </div>
                 <div class="box-body">
-                    {% include "tables/groups.html.twig" with {
+                    {% include "tables/crudlist.html.twig" with {
                             "table" : {
-                                "id" : "table-groups"
+                                "id" : "table-{{cr5model}}"
                             }
                         }
                     %}
                 </div>
                 {% if checkAccess('create_group') %}
                 <div class="box-footer">
-                    <button type="button" class="btn btn-success js-group-create">
+                    <button type="button" class="btn btn-success js-{{cr5model}}-create">
                         <i class="fas fa-plus-square"></i>  {{translate("CRUD.CREATE")}}
                     </button>
                 </div>
