--- a/app/templates/pages/crudlist.html.twig
+++ b/app/templates/pages/crudlist.html.twig
@@ -28,7 +28,7 @@
                 </div>
                 {% if checkAccess('create_group') %}
                 <div class="box-footer">
-                    <button type="button" class="btn btn-success js-{{crud5.model}}-create">
+                    <button type="button" class="btn btn-success js-crud5-create">
                         <i class="fas fa-plus-square"></i>  {{translate("CRUD.CREATE")}}
                     </button>
                 </div>
