Modal and Edit classes working
Added Forms dependency

--- a/app/templates/modals/crud5-edit.html.twig
+++ b/app/templates/modals/crud5-edit.html.twig
@@ -3,5 +3,5 @@
 {% block modal_title %}{{translate('GROUP')}}{% endblock %}
 
 {% block modal_body %}
-    {% include "forms/group.html.twig" %}
+    {% include "forms/crud5-edit.html.twig" %}
 {% endblock %}
