--- a/app/templates/forms/crud5-edit.html.twig
+++ b/app/templates/forms/crud5-edit.html.twig
@@ -1,4 +1,4 @@
-<form class="js-form" method="{{form.method | default('POST')}}" action="{{site.uri.public}}/{{form.action}}">
+<form class="js-form" method="{{form.method | default('POST')}}" action="{{site.uri.public}}/{{form.action}}" crud5_action="{{site.uri.public}}/{{form.crud5_action}}">
     {% include "forms/csrf.html.twig" %}
     <div class="js-form-alerts">
     </div>
