Added CRUD4 features

--- a/app/templates/pages/crudlist.html.twig
+++ b/app/templates/pages/crudlist.html.twig
@@ -3,7 +3,8 @@
 {% block stylesheets_page %}
     <!-- Page-specific CSS asset bundle -->
     {# {{ encore_entry_link_tags('page.groups') }} #}
-    {{ encore_entry_link_tags('page.'~ crud5.model) }}
+    {# {{ encore_entry_link_tags('page.'~ crud5.model) }}
+    #}
 {% endblock %}
 
 {# Overrides blocks in head of base template #}
