--- a/app/templates/FormGenerator/macros/textarea.html.twig
+++ b/app/templates/FormGenerator/macros/textarea.html.twig
@@ -1,7 +1,12 @@
 {% macro generate(input) %}
     {% if input.icon %}<div class="input-group"><span class="input-group-addon"><i class="{{input.icon}}"></i></span>{% endif %}
-    <textarea {% for type,value in input %}{% if type != 'value' %}{{type}}="{{value}}"{% endif %}
-    {% endfor %}>{% if input.data_type == 'json' %}{{input.value | json_encode(constant('JSON_PRETTY_PRINT'))|raw }}{% else %}{{input.value}}
-    {% endif %}</textarea>
+    <textarea {% for type,value in input %}
+    {% if type == 'placeholder' %}
+        placeholder="{{translate(value)}}"
+    {% elseif type != 'value' %}
+        {{type}}="{{value}}"
+    {% endif %}
+    {% endfor %}
+    >{% if input.data_type == 'json' %}{{input.value | json_encode(constant('JSON_PRETTY_PRINT'))|raw }}{% else %}{{input.value}}{% endif %}</textarea>
     {% if input.icon %}</div>{% endif %}
 {% endmacro %}
